--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="th" style="scroll-behavior: smooth;">
 <head>
@@ -8,13 +7,18 @@
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/devoncasa/goldentaan-assets@main/golden-taan-logo-smll.webp" sizes="any" type="image/webp">
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/devoncasa/goldentaan-assets@main/golden-taan-logo-smll.webp">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Sarabun', sans-serif;
+        }
+        @media (min-width: 1024px) { /* Apply on desktop screens (Tailwind's 'lg' breakpoint) */
+          .focused-desktop-layout {
+            /* Create a focused reading column: 60% of viewport width, capped at 1280px. */
+            max-width: min(60vw, 1280px);
+          }
         }
     </style>
 <script type="importmap">
@@ -23,9 +27,9 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "chart.js": "https://aistudiocdn.com/chart.js@^4.5.0",
-    "chart.js/": "https://aistudiocdn.com/chart.js@^4.5.0/",
-    "react-chartjs-2": "https://aistudiocdn.com/react-chartjs-2@^5.3.0"
+    "vega": "https://aistudiocdn.com/vega@^5.29.0",
+    "vega-lite": "https://aistudiocdn.com/vega-lite@^5.19.0",
+    "vega-embed": "https://aistudiocdn.com/vega-embed@^6.25.0"
   }
 }
 </script>
